--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <tile>Andy's Bio</tile>
+    <title>Andy's Bio</title>
 </head>
 <body>
     <nav></nav>
@@ -23,7 +23,7 @@
     </p>
     <br>
     <h2>Contact Info</h2>
-    
+    <!--some links -->
     <ul>
         <li><strong>Email:</strong> <a href="#">arichard101@gmail.com</a></li>
         <li><strong>Github:</strong> <a href="#">https://github.com/andyrich75</a></li>
